--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^5.15.3",
     "@mui/styled-engine-sc": "^6.0.0-alpha.11",
     "@mui/x-data-grid": "^6.18.7",
+    "@react-google-maps/api": "^2.19.3",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
@@ -26,6 +27,7 @@
     "react-dom": "^18.2.0",
     "react-image-gallery": "^1.3.0",
     "react-router-dom": "^6.23.1",
+    "react-scroll-parallax": "^3.4.5",
     "styled-components": "^6.1.6",
     "zustand": "^4.4.7"
   },
