--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/x-data-grid": "^6.18.7",
     "@react-google-maps/api": "^2.19.3",
     "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.3",
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
     "react-bootstrap": "^2.10.2",
