intento mapear imagenes del patrimonio

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-router-dom": "^6.23.1",
     "react-scroll-parallax": "^3.4.5",
     "styled-components": "^6.1.6",
+    "swiper": "^11.1.11",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
