--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "@react-google-maps/api": "^2.19.3",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-image-gallery": "^1.3.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.23.1",
     "react-scroll-parallax": "^3.4.5",
     "styled-components": "^6.1.6",
