--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_APP_RUTA_BACK = "http://localhost:3050"
-# VITE_APP_RUTA_BACK = "https://ciudaddigital.smt.gob.ar:2000"
+# VITE_APP_RUTA_BACK = "http://localhost:3050"
+VITE_APP_RUTA_BACK = "https://estadisticas.smt.gob.ar:5000"
