--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 # VITE_APP_RUTA_BACK = "http://localhost:3050"
-VITE_APP_RUTA_BACK = "https://estadisticas.smt.gob.ar:5000"
+VITE_APP_RUTA_BACK = "https://patrimonio.smt.gob.ar:5556"
+# VITE_APP_RUTA_BACK = "https://estadisticas.smt.gob.ar:5000"
